[package]
author = "bivoje <bivoje49@gmail.com>"
name = "asciichart-cli"
version = "0.1.0"
edition = "2021"
description = "provides CUI interface for asciichart library"
licese = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
itertools = "0.10.3"
rand = "0.8.5"
