[package]
author = "bivoje <bivoje49@gmail.com>"
name = "asciichart-cli"
version = "0.1.1"
edition = "2021"
description = "provides CUI interface for asciichart library"
licese = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
itertools = "0.10.3"
rand = "0.8.5"

# https://stackoverflow.com/a/31778003
# use following commands to get statically linked executable
# rustup target add x86_64-unknown-linux-musl
# cargo build --target=x86_64-unknown-linux-musl --release
